...
                                itemView(hotel)
                                    .swipeActions {
                                        Button {
                                            self.viewModel.hotelToDelete = hotel
                                            viewModel.showDeleteItemAlert = true
                                        } label: {
                                            Label("Delete", systemImage: "trash")
                                        }
                                        .tint(.red)
                                        Button {
                                            viewCoordinator.show(.hotelForm(viewMode: .edit(hotel: hotel)))
                                        } label: {
                                            Label("Edit", systemImage: "pencil")
...
                ProgressView("loading queried hotels")
            }
        }
        .onAppear() {
            viewModel.onAppear()
        }
        .alert("Are you sure you want to delete this item?", isPresented: $viewModel.showDeleteItemAlert) {
            Button("Cancel", role: .cancel) {
                viewModel.deleteItemAlertDismissed()
            }
            Button("Delete", role: .destructive) {
                viewModel.deleteItemAlertAccepted()
            }
...
