...
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    viewCoordinator.show(.hotelForm(viewMode: .edit(hotel: hotel)))
                } label: {
                    Text("Edit")
                }
                .accessibilityIdentifier("EditHotelButton")
            }
        }
    }
}

